syntax = 'proto3';

package chatgroup;

message Member {
    string name = 1;
    string ip = 2;
    string port = 3;
    bool leader = 4;
}

message MemberList {
    repeated Member member = 1;
}

message Message {
    enum MessageType {
        SUBSCRIBE = 0;
        UNSUBSCRIBE = 1;
        PUBLISH = 2;
        DISPLAY_TEXT = 3;
        DISPLAY_SUBSCRIPTION = 4;
        DISPLAY_UNSUBSCRIPTION = 5;
        CMD_REPLY = 6;
        CMD_LIST = 7;
    }
    MessageType msgType = 1;
    Member  sender = 2;
    string  text = 3;
}
